--- a/src/style/_flex.scss
+++ b/src/style/_flex.scss
@@ -20,6 +20,7 @@
 .flex-right { justify-content: flex-end; }
 .flex-between { justify-content: space-between; }
 .flex-around { justify-content: space-around; }
+.flex-column-gap {column-gap: 200px;}
 /*
  * Align items in the cross axis of the current line of the flex container
  * Row: Vertical
